<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hour_title"/>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center">
    <EditText
        android:id="@+id/hour"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hora_hint"
        android:inputType="number"
        android:textAlignment="textEnd"
        android:gravity="end" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=":"/>
    <EditText
        android:id="@+id/minutes"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/min_hint"
        android:inputType="number"
        android:textAlignment="textStart"
        android:gravity="start" />
    <Spinner
        android:id="@+id/time_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</LinearLayout>

    <EditText
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/desc_hint"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:inputType="text"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_alarm_butt_text"
        android:layout_marginTop="8dp" />

</LinearLayout>